# ai-agent-orchestrator

./: .env.example  .gitignore  BLOG_POST.md  CONTRIBUTING.md  GITHUB_ISSUE_TESTING_PHASE.md  LAUNCH.md  LICENSE  PUBLISHING_PLAN.md  QUICKSTART.md  README.md  TEST_STRATEGY.md  autonomous_orchestrator.py  backtest_report.json  backtest_suite.py  dynamic_orchestration.py  examples.py  mcp_server.py  orchestrator.py  pyproject.toml  requirements.txt  smithery.json
.backtest_memory/: lessons_learned.json
.github/: FUNDING.yml
.github/workflows/: test.yml
docs/: dynamic-orchestration-architecture.md  migration-matrix.md  operations-runbook.md  performance-baseline.json  performance-baseline.md
scripts/: profile_execution_paths.py
tests/: conftest.py
tests/e2e/: __init__.py  test_dynamic_golden_paths.py
tests/failure_modes/: test_dynamic_planning_failure_modes.py
tests/fakes/: __init__.py  fake_classifier.py  fake_dag_executor.py  fake_llm_client.py  fake_memory_store.py  fake_registry.py  fake_team_composer.py
tests/fixtures/: __init__.py  golden_routing_fallback.py  perf_harness.py
tests/integration/: __init__.py  test_mcp_server_contracts.py  test_migration_docs_smoke.py  test_performance_smoke.py
tests/unit/: test_classifier_confidence.py  test_dynamic_orchestration.py  test_dynamic_orchestration_compat.py  test_team_composer_policy.py
